Multiple strategies implemetned